--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div id="container">
       <div class="inner">
         <header>
-          <h1>TEST - Under Development</h1>
+          <p>TEST - Under Development</p>
           <h2></h2>
         </header>
         <section id="downloads" class="clearfix"></section>
         <hr />
         <section id="main_content">
-          <h1 id="test---under-development">TEST - Under Development</h1>
+          <p id="test---under-development">Test Error - Under Development</p>
           <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
 
           <p>
