--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dummy Site OK</title>
+		<title>Dummy Website (error)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Dummy Site OK</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Dummy Website (error)</h1>
+						<p>Add general SEO errors here to test.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,13 +28,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Dummy Website</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -71,7 +70,7 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
+										<h2><a href="post1.html">Sed magna<br />
 										ipsum faucibus</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -83,7 +82,7 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
+										<h2><a href="/post1">Primis eget<br />
 										imperdiet lorem</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
