--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Dummy Website (error)</h1>
+						<p>Dummy Website (error)</p>
 						<p>Add general SEO errors here to test.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -53,8 +53,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<p><a href="#">And this is a<br />
+									massive headline</a></p>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
@@ -70,8 +70,8 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="post1.html">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<p><a href="post1.html">Sed magna<br />
+										ipsum faucibus</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -82,8 +82,8 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="/post1">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<p><a href="/post1">Primis eget<br />
+										imperdiet lorem</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -94,8 +94,8 @@
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<p><a href="#">Ante mattis<br />
+										interdum dolor</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -106,8 +106,8 @@
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<p><a href="#">Tempus sed<br />
+										nulla imperdiet</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -118,8 +118,8 @@
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<p><a href="#">Odio magna<br />
+										sed consectetur</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -130,8 +130,8 @@
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<p><a href="#">Augue lorem<br />
+										primis vestibulum</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -183,20 +183,20 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
+								<span>Address</span>
 								<p>1234 Somewhere Road #87257<br />
 								Nashville, TN 00000-0000</p>
 							</section>
 							<section>
-								<h3>Phone</h3>
+								<span>Phone</span>
 								<p><a href="#">(000) 000-0000</a></p>
 							</section>
 							<section>
-								<h3>Email</h3>
+								<span>Email</span>
 								<p><a href="#">info@untitled.tld</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+								<span>Social</span>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
