--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<p><a href="/post1">Primis eget<br />
+										<p><a href="#">Primis eget<br />
 										imperdiet lorem</a></p>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
