--- a/generic.html
+++ b/generic.html
@@ -34,6 +34,7 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://shop.ledger.com/?r=e9c1" class="icon brands fa-github"><span class="label">External link test</span></a></li>
 						</ul>
 					</nav>
 
